# fetchly

./: .gitignore  Containerfile
.github/workflows/: build.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: api.rs  db.rs  gemini.rs  main.rs  search.rs  sync.rs  todoist.rs  unit.rs
backend/src/scraper/: eurospin.rs  kaufland.rs  konzum.rs  ktc.rs  lidl.rs  mod.rs  spar.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: lib.rs
