[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
name = "frontend"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["KeyboardEvent"] }
